crates/vise/tests/ui/labels/bogus_label_name_in_field.rs
use vise::EncodeLabelSet;

#[derive(Debug, EncodeLabelSet)]
struct Labels {
    test: &'static str,
    код: u16,
}

fn main() {}
